Bug 91426 - DirectX canvas: crash after exiting presentation
Summary: DirectX canvas: crash after exiting presentation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
: 91144 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-21 11:03 UTC by Buovjaga
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace of crash (11.44 KB, text/plain)
2015-05-21 11:03 UTC, Buovjaga
Details
Backtrace of crash (11.60 KB, text/plain)
2015-05-22 11:06 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2015-05-21 11:03:10 UTC
Created attachment 115766 [details]
Backtrace of crash

Another VclPtr problem, it seems.

1. New Impress presentation
2. Press F5
3. Click to exit
4. Crash

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+
Build ID: 2a886adb500fe481e1ea61573551b19e99c55b8b
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-20_00:31:51
Locale: fi-FI (fi_FI)
Comment 1 Timur 2015-05-21 13:19:11 UTC
Reproduced in Windows, not in Linux.
Comment 2 Michael Meeks 2015-05-22 10:21:56 UTC
Yep - this is specific to the DirectX canvas; a good windbg trace would be awesome - or I'll have to do this at home.
Comment 3 Buovjaga 2015-05-22 11:06:54 UTC
Created attachment 115817 [details]
Backtrace of crash

Ok, I think this is a better backtrace.
At least it gives an ExceptionAddress while my older one didn't.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 83eb114394879cbfd073322a51c47d02553c1fcf
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-22_06:33:51
Locale: fi-FI (fi_FI)
Comment 4 Michael Meeks 2015-05-22 13:46:22 UTC
*** Bug 91144 has been marked as a duplicate of this bug. ***
Comment 5 Don't use this one - Philippe Jung 2015-05-25 14:02:34 UTC
With steps from #91144, I get this with gdb under Win

#0  0x0396ab75 in vcllo!?reset@SolarMutexResettableGuard@@QAAXXZ ()
   from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#1  0x039502c2 in vcllo!??1VclSimpleEvent@@UAE@XZ () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#2  0x03950354 in vcllo!??1VclSimpleEvent@@UAE@XZ () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#3  0x039bbb68 in vcllo!?ImplRemoveWindow@Window@vcl@@AAEX_N@Z () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#4  0x03af8480 in vcllo!?dispose@Window@vcl@@MAEXXZ () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#5  0x03ab7069 in vcllo!?dispose@SystemChildWindow@@UAEXXZ () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#6  0x03be27c1 in vcllo!?disposeOnce@OutputDevice@@QAEXXZ () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#7  0x03ab66fe in vcllo!??1SystemChildWindow@@UAE@XZ () from /home/philippe/lode/dev/core/instdir/program/vcllo.dll
#8  0x12bd6860 in directx9canvaslo!??_0Point@@QAEAAV0@J@Z ()
   from /cygdrive/c/cygwin/home/philippe/lode/dev/core/instdir/program/directx9canvaslo.dll
#9  0x12bd38b6 in ?? () from /cygdrive/c/cygwin/home/philippe/lode/dev/core/instdir/program/directx9canvaslo.dll
#10 0x12bd58a2 in directx9canvaslo!??0Point@@QAE@XZ ()
   from /cygdrive/c/cygwin/home/philippe/lode/dev/core/instdir/program/directx9canvaslo.dll
Comment 6 Michael Meeks 2015-05-26 13:39:35 UTC
Thanks - an easy one; fixed =)
Comment 7 Commit Notification 2015-05-26 13:41:18 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90e901b3f92b3c537aaf0dab83de2a9b073e761f

tdf#91426 - fix DX canvas - missed by VclPtr / Clang plugin.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-05-28 08:50:27 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f21d3a080ffa6452bb69bd046a4d387e06b843b4&h=libreoffice-5-0

tdf#91426 - fix DX canvas - missed by VclPtr / Clang plugin.

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.