tdf#91426 - fix DX canvas - missed by VclPtr / Clang plugin.

Change-Id: I7969746b159051d65ea974b89ba458d0d14f466a